# EchoVault

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/services/: audio_processor.py  model_manager.py  transcriber.py
backend/app/utils/: logger.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
