[project]
name = "echovault-engine"
version = "0.1.0"
description = "Inference engine for EchoVault"
authors = [
    {name = "alexenache10"}
]
requires-python = "^3.10"
dependencies = [
    "faster-whisper (>=1.2.1,<2.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
